--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "imagemin-webpack-plugin": "2.4.2",
         "copy-webpack-plugin": "5.0.3",
         "imagemin-mozjpeg": "8.0.0",
-        "lightgallery.js": "1.1.3"
+        "lightgallery.js": "1.1.3",
+        "imask": "5.1.8"
     }
 }
